<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/camps">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/meus_camps"
                    android:title="@string/my_camps" />
                <item
                    android:id="@+id/invite_camp"
                    android:title="@string/follow" />
                <item
                    android:id="@+id/busca_camp"
                    android:title="@string/search" />
            </group>
        </menu>
    </item>
    <item android:title="@string/extras">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sorteio_fifa"
                    android:title="@string/raffle_fifa" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/sair" />

</menu>
