<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLiga"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:background="@color/colorPrimaryLight"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_8"
        android:paddingRight="@dimen/margin_8">

        <TextView
            android:id="@+id/posicao"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="5%" />

        <TextView
            android:id="@+id/nomeTime"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/posicao"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="39%" />

        <TextView
            android:id="@+id/pontos"
            style="@style/Text10MontserratBold"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/nomeTime"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/points"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

        <TextView
            android:id="@+id/jogos"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/pontos"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/games"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

        <TextView
            android:id="@+id/vitorias"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/jogos"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/wins"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

        <TextView
            android:id="@+id/empates"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/vitorias"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/draws"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

        <TextView
            android:id="@+id/derrotas"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/empates"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/loses"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

        <TextView
            android:id="@+id/golsFeitos"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/derrotas"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/gols_feitos"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

        <TextView
            android:id="@+id/golsSofridos"
            style="@style/Text10MontserratRegular"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/golsFeitos"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/gols_sofridos"
            android:textColor="@color/colorPrimaryText2"
            app:layout_widthPercent="8%" />

    </android.support.percent.PercentRelativeLayout>

</LinearLayout>