<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="@dimen/margin_50"
            android:src="@drawable/trophy" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryText2"
            app:fontPath="@string/monstserrat_regular">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLightEdt"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"
                android:textColorHighlight="@color/colorPrimaryLightEdt"
                android:textColorHint="@color/colorPrimaryText2"
                android:textColorLink="@color/colorPrimaryLightEdt"
                app:fontPath="@string/monstserrat_regular" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryText2"
            app:fontPath="@string/monstserrat_regular">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimaryLightEdt"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textColorHighlight="@color/colorPrimaryLightEdt"
                android:textColorHint="@color/colorPrimaryText2"
                android:textColorLink="@color/colorPrimaryLightEdt"
                app:fontPath="@string/monstserrat_regular" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/BtnSalvar"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/btn_login"/>

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/BtnSalvar"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@null"
            android:text="@string/btn_forgot_password"/>

        <Button
            android:id="@+id/btn_signup"
            style="@style/BtnSalvar"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@null"
            android:text="@string/btn_link_to_register"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryText2"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="1dp" />
    </LinearLayout>
</ScrollView>