<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/layout_busca"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_busca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorPrimaryLightEdt"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:hint="@string/hint_edt"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHighlight="@color/colorPrimaryLightEdt"
            android:textColorHint="@color/colorPrimaryText2"
            android:textColorLink="@color/colorPrimaryLightEdt"
            app:fontPath="@string/monstserrat_regular" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewBusca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/edt_busca"
            android:background="@color/colorPrimaryLight"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_busca"
            style="@style/Text16MontserratRegular"
            android:layout_centerInParent="true"
            android:lineSpacingExtra="@dimen/margin_5"
            android:padding="@dimen/margin_20"
            android:text="@string/text_busca"
            android:visibility="visible" />

        <TextView
            android:id="@+id/placeholder_busca"
            style="@style/Text16MontserratRegular"
            android:layout_centerInParent="true"
            android:lineSpacingExtra="@dimen/margin_5"
            android:padding="@dimen/margin_20"
            android:text="@string/place_holder_busca"
            android:visibility="visible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/background_loading"
            android:layout_centerInParent="true"
            android:gravity="center">

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                app:fontPath="@string/monstserrat_regular"
                app:indicatorColor="@color/colorAccent"
                app:indicatorName="BallSpinFadeLoaderIndicator" />

            <TextView
                style="@style/LoadingText"
                android:layout_marginTop="5dp"
                android:text="@string/loading_text" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>